crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/alembic.abc
version https://git-lfs.github.com/spec/v1
oid sha256:3b7d3c90b41b719bebff71db2debf066b5780593010620289fcbab4bcdb1fec0
size 659
